test_resources/lit_class/errors/test4.yr
class A {
    pub fn foo (self) {
        bar ();
    }
}
